src/objects/Apttus_Approval__Reminder__c.object
<CustomObject>
    <description>Specifies design time information for process step and subprocess reminders.</description>
    <fields>
        <fullName>Apttus_Approval__DurationUnit__c</fullName>
        <label>Duration Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DurationValue__c</fullName>
        <label>Duration Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ProcesssStepId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Step Id</label>
        <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
        <relationshipLabel>Reminders</relationshipLabel>
        <relationshipName>Approval_Request_Reminders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSequence__c</fullName>
        <label>Step Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepType__c</fullName>
        <label>Step Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Step</fullName>
                </value>
                <value>
                    <fullName>Subprocess</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubprocessRuleEntryAssigneeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subprocess Rule Entry Assignee Id</label>
        <referenceTo>Apttus_Approval__ApprovalRuleAssignee__c</referenceTo>
        <relationshipLabel>Reminders</relationshipLabel>
        <relationshipName>Approval_Request_Reminders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubprocessRuleEntryAssigneeSeq__c</fullName>
        <label>Subprocess Rule Entry Assignee Seq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubprocessRuleEntryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subprocess Rule Entry Id (DEPRECATED)</label>
        <referenceTo>Apttus_Approval__ApprovalRuleEntry__c</referenceTo>
        <relationshipLabel>Reminders</relationshipLabel>
        <relationshipName>Approval_Request_Reminders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reminder</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Label__c</columns>
        <columns>Apttus_Approval__StepSequence__c</columns>
        <columns>Apttus_Approval__DurationValue__c</columns>
        <columns>Apttus_Approval__DurationUnit__c</columns>
        <columns>Apttus_Approval__StepType__c</columns>
        <columns>Apttus_Approval__ProcesssStepId__c</columns>
        <columns>Apttus_Approval__SubprocessRuleEntryAssigneeId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>REM-{000000}</displayFormat>
        <label>Reminder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>